--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,137 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     list-style: none;
     list-style-type: none;
+    font-family: 'Montserrat', sans-serif;
 }
 
 a {
     text-decoration: none;
 }
+
+body {
+    background: seagreen;
+}
+
+.carousel {
+    height: 100vh;
+    padding: 0 10%;
+}
+
+.carousel .box-info {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 650px;
+}
+
+.list-info .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+}
+
+.info h2 {
+    font-size: 50px;
+    line-height: 1;
+}
+
+.info p {
+    font-size: 16px;
+    margin: 20px 0;
+    text-align: justify;
+}
+
+.info .btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #fff;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    font-size: 16px;
+    color: #fff;
+    transition: all .5s ease-in-out;
+    font-weight: 600;
+}
+
+.info .btn:hover {
+    background-color: #fff;
+    color: #000;
+    box-shadow: 0 0 25px rgba(0, 0, 0, .3);
+}
+
+.carousel .list-img {
+    height: 100%;
+}
+
+.list-img .item {
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.item img {
+    position: absolute;
+    right: 0;
+    pointer-events: none;
+    filter: drop-shadow(0 0 10px rgba(0, 0, 0, .1));
+}
+
+
+.navigation {
+    position: absolute;
+    bottom: 7%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.navigation span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    background: transparent;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    margin: 0 10px;
+    font-size: 55px;
+    color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
