--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 .carousel {
     height: 100vh;
     padding: 0 10%;
+    overflow: hidden;
 }
 
 .carousel .box-info {
@@ -27,6 +28,12 @@ body {
     top: 50%;
     transform: translateY(-50%);
     width: 650px;
+    height: 250px;
+    overflow: hidden;
+}
+
+.carousel .list-info {
+    transition: 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .list-info .info {
@@ -34,6 +41,7 @@ body {
     flex-direction: column;
     justify-content: center;
     color: #fff;
+    height: 250px;
 }
 
 .info h2 {
@@ -71,6 +79,7 @@ body {
 
 .carousel .list-img {
     height: 100%;
+    transition: 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .list-img .item {
