--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,6 @@ a {
     text-decoration: none;
 }
 
-body {
-    background: seagreen;
-}
-
 .carousel {
     height: 100vh;
     padding: 0 10%;
@@ -120,16 +116,37 @@ body {
     color: #fff;
 }
 
+.bg-box .bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
 
+.bg-box .bg:nth-child(1) {
+    background: linear-gradient(360deg, #408e20, #9acd31);
+}
+.bg-box .bg:nth-child(2) {
+    background: linear-gradient(360deg, #550802, #f40401);
+}
+.bg-box .bg:nth-child(3) {
+    background: linear-gradient(360deg, #696901, #ffff03);
+}
+.bg-box .bg:nth-child(4) {
+    background: linear-gradient(360deg, #823043, #fac0cb);
+}
 
+.bg-box .bg:nth-child(2),
+.bg-box .bg:nth-child(3),
+.bg-box .bg:nth-child(4) {
+    clip-path: circle(0% at 50% 50%);
+}
 
-
-
-
-
-
-
-
+.bg-box .bg:nth-child(2).active,
+.bg-box .bg:nth-child(3).active,
+.bg-box .bg:nth-child(4).active {
+    clip-path: circle(75% at 50% 50%);
+}
 
 
 
